Fix Movie Credits on Mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -332,11 +332,10 @@ dl.meta {
 dl.meta dt {
     clear: both;
     float: left;
+    margin-right: 0.5em;
 }
 
 dl.meta dd {
-    float: left;
-    margin-left: 0.5em;
     color: #989898;
 }
 
